test: implementado funcionalidade PERSONS para o serviço Gai Identity
